crates/swc/tests/tsc-references/types/primitives/void/invalidVoidValues/input.ts/es5.2.minified/output.js
x = 1, x = "", x = !0, (E = E1 || (E1 = {
}))[E.A = 0] = "A", x = E1, x = E1.A;
var E, x, E1, a1, b, M, C = function() {
    "use strict";
    !function(instance, Constructor) {
        if (!(instance instanceof Constructor)) throw new TypeError("Cannot call a class as a function");
    }(this, C);
};
x = a1, x = b, x = {
    f: function() {
    }
}, (M || (M = {
})).x = 1, x = M, x = function(a) {
    x = a;
};
